--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "jest": "^27.4.3"
+    "jest": "^27.4.3",
+    "mock-stdin": "^1.0.0"
   },
   "dependencies": {
     "chalk": "^4.1.2"
