testing and comment cleanup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test": "jest",
+    "testhandles": "jest --detectOpenHandles"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
